# tree-sitter-sammine

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-sammine.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sammine/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSammine/: sammine.h
bindings/swift/TreeSitterSammineTests/: TreeSitterSammineTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
tests/: if.mn
